--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.177.0",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
+    "eslint": "^9.30.1",
     "eslint-config-next": "15.3.3",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prisma": "^6.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
